[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-gps"
version = "0.1.0"
description = "Map, review, and improve AI-agent working environments in repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Agent GPS contributors" }
]
keywords = ["ai-agents", "codex", "skills", "mcp", "graphify", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
agent-gps = "agent_gps:main"

[tool.setuptools]
py-modules = ["agent_gps"]
